@@ -57,7 +57,6 @@ roms
 * source code window: scrolling is somewhat broken
 * state of debugger windows is buggy
 * switch from no skin to skin w/ TI92: window is not refreshed (Linux only)
-* preload debugger
 
 -------------
 + done
