@@ -41,11 +41,17 @@ DbgWidgets dbgw = { 0 };
 
 int dbg_on = 0;
 
+static int wm_offset = 0;
+
 /* Functions applicable to the whole debugger */
 
 // create windows but don't show them
 void gtk_debugger_preload(void)
 {
+#ifdef __WIN32__
+	OSVERSIONINFO os;
+#endif
+
 	// open debugger windows
 	dbgw.regs  = dbgregs_create_window();
 	dbgw.mem   = dbgmem_create_window();
@@ -54,6 +60,25 @@ void gtk_debugger_preload(void)
     dbgw.stack = dbgstack_create_window();
 	dbgw.heap  = dbgheap_create_window();
 	dbgw.code  = dbgcode_create_window();
+
+	// Try and determine OS type for WM metric (heuristic). Reason follows...
+	/*
+		gtk_window_get_position() is not 100% reliable because the X Window System does not 
+		specify a way to obtain the geometry of the decorations placed on a window by the 
+		window manager. Thus GTK+ is using a "best guess" that works with most window managers.
+	*/
+#ifdef __LINUX__
+	wm_offset = 0;
+#else
+  	memset(&os, 0, sizeof(OSVERSIONINFO));
+  	os.dwOSVersionInfoSize = sizeof(OSVERSIONINFO);
+  	GetVersionEx(&os);
+
+	if(os.dwMajorVersion == 5 && os.dwMinorVersion == 1)
+		wm_offset = 30;	// WinXP with XP theme, not classic
+	else
+		wm_offset = 20;	// others
+#endif
 }
 
 // show previously created window
@@ -399,6 +424,7 @@ on_dbgregs_window_state_event		   (GtkWidget       *widget,
 
 		gtk_window_get_size(GTK_WINDOW(widget), &options3.regs.rect.w, &options3.regs.rect.h);
 		gdk_window_get_position(widget->window, &options3.regs.rect.x, &options3.regs.rect.y);
+		options3.regs.rect.y -= wm_offset;
 	}
 
 	if(mask & GDK_WINDOW_STATE_ICONIFIED)
@@ -430,6 +456,7 @@ on_dbgpclog_window_state_event		   (GtkWidget       *widget,
 
 		gtk_window_get_size(GTK_WINDOW(widget), &options3.pclog.rect.w, &options3.pclog.rect.h);
 		gdk_window_get_position(widget->window, &options3.pclog.rect.x, &options3.pclog.rect.y);
+		options3.pclog.rect.y -= wm_offset;
 	}
 
 	if(mask & GDK_WINDOW_STATE_ICONIFIED)
@@ -462,6 +489,7 @@ on_dbgmem_window_state_event		   (GtkWidget       *widget,
 
 		gtk_window_get_size(GTK_WINDOW(widget), &options3.mem.rect.w, &options3.mem.rect.h);
 		gdk_window_get_position(widget->window, &options3.mem.rect.x, &options3.mem.rect.y);
+		options3.mem.rect.y -= wm_offset;
 	}
 
 	if(mask & GDK_WINDOW_STATE_ICONIFIED)
@@ -495,6 +523,7 @@ on_dbgcode_window_state_event		   (GtkWidget       *widget,
 
 		gtk_window_get_size(GTK_WINDOW(widget), &options3.code.rect.w, &options3.code.rect.h);
 		gdk_window_get_position(widget->window, &options3.code.rect.x, &options3.code.rect.y);
+		options3.code.rect.y -= wm_offset;
 	}
 
 	if(mask & GDK_WINDOW_STATE_ICONIFIED)
@@ -527,6 +556,7 @@ on_dbgbkpts_window_state_event		   (GtkWidget       *widget,
 
 		gtk_window_get_size(GTK_WINDOW(widget), &options3.bkpts.rect.w, &options3.bkpts.rect.h);
 		gdk_window_get_position(widget->window, &options3.bkpts.rect.x, &options3.bkpts.rect.y);
+		options3.bkpts.rect.y -= wm_offset;
 	}
 
 	if(mask & GDK_WINDOW_STATE_ICONIFIED)
@@ -558,6 +588,7 @@ on_dbgstack_window_state_event		   (GtkWidget       *widget,
 
 		gtk_window_get_size(GTK_WINDOW(widget), &options3.stack.rect.w, &options3.stack.rect.h);
 		gdk_window_get_position(widget->window, &options3.stack.rect.x, &options3.stack.rect.y);
+		options3.stack.rect.y -= wm_offset;
 	}
 
 	if(mask & GDK_WINDOW_STATE_ICONIFIED)
@@ -589,6 +620,7 @@ on_dbgheap_window_state_event		   (GtkWidget       *widget,
 
 		gtk_window_get_size(GTK_WINDOW(widget), &options3.heap.rect.w, &options3.heap.rect.h);
 		gdk_window_get_position(widget->window, &options3.heap.rect.x, &options3.heap.rect.y);
+		options3.heap.rect.y -= wm_offset;
 	}
 
 	if(mask & GDK_WINDOW_STATE_ICONIFIED)
