@@ -192,6 +192,7 @@ GtkWidget* dbgstack_display_window(void)
 	if(!already_open)
 		wnd = dbgstack_create_window();
     
+#ifdef WND_STATE
 	if(!options3.stack.minimized)
 	{
 		gtk_window_resize(GTK_WINDOW(wnd), options3.stack.rect.w, options3.stack.rect.h);
@@ -199,6 +200,7 @@ GtkWidget* dbgstack_display_window(void)
 	}
 	else
 		gtk_window_iconify(GTK_WINDOW(wnd));
+#endif
 
 	clist_refresh(store1, TARGET_SP);
 	clist_refresh(store2, TARGET_FP);
